force-app/main/default/objects/Product_Pricing__c/Product_Pricing__c.object-meta.xml
<CustomObject>
    <label>Product Pricing</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>