force-app/main/default/objects/Product_Pricing__c/fields/Default_Units_to_Emp_Count__c.field-meta.xml
<CustomField>
    <fullName>Default_Units_to_Emp_Count__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To default the units to the Opportunity Employee Count, select this.</description>
    <inlineHelpText>To default the units to the Opportunity Employee Count, select this.</inlineHelpText>
    <label>Default Units to Emp Count</label>
    <type>Checkbox</type>
</CustomField>