force-app/main/default/objects/Product_Pricing__c/fields/Minimum_Fee__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Fee__c</fullName>
    <label>Minimum Fee</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>