force-app/main/default/objects/Product_Pricing__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>One or more Sales Orgs should always be populated for a product otherwise it will not be selected.</inlineHelpText>
    <label>Sales Org</label>
    <length>30</length>
    <type>Text</type>
</CustomField>