force-app/main/default/objects/Product_Pricing__c/listViews/All_Base_Only.listView-meta.xml
<ListView>
    <fullName>All_Base_Only</fullName>
    <columns>NAME</columns>
    <columns>Frequency_Search__c</columns>
    <columns>Frequency_Annual_Rev__c</columns>
    <columns>Base_Fee__c</columns>
    <columns>Setup_Fee__c</columns>
    <columns>Pricing_Schedule__c</columns>
    <columns>Low_Value__c</columns>
    <columns>High_Value__c</columns>
    <columns>Pricing_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All-Base Only</label>
</ListView>