force-app/main/default/objects/Product_Pricing__c/listViews/Bus_Plan_PPS.listView-meta.xml
<ListView>
    <fullName>Bus_Plan_PPS</fullName>
    <columns>NAME</columns>
    <columns>Frequency_Search__c</columns>
    <columns>Frequency_Annual_Rev__c</columns>
    <columns>Base_Fee__c</columns>
    <columns>Pricing_Type__c</columns>
    <columns>Pricing_Schedule__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>Bus Plan-PPS</value>
    </filters>
    <label>Bus Plan-PPS</label>
</ListView>