force-app/main/default/objects/Product_Pricing__c/listViews/Core_Payroll_Only.listView-meta.xml
<ListView>
    <fullName>Core_Payroll_Only</fullName>
    <columns>NAME</columns>
    <columns>Frequency_Search__c</columns>
    <columns>Frequency_Annual_Rev__c</columns>
    <columns>Base_Fee__c</columns>
    <columns>Pricing_Type__c</columns>
    <columns>Pricing_Schedule__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Bus Plan-PAY010</value>
    </filters>
    <label>Bus Plan-Core Payroll</label>
</ListView>