force-app/main/default/objects/Product_Pricing__c/listViews/Core_Pricing_15.listView-meta.xml
<ListView>
    <fullName>Core_Pricing_15</fullName>
    <columns>NAME</columns>
    <columns>Pricing_Schedule__c</columns>
    <columns>Frequency_Search__c</columns>
    <columns>Low_Value__c</columns>
    <columns>High_Value__c</columns>
    <columns>Amount__c</columns>
    <columns>Discount_Pct_Allowed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>PAY</value>
    </filters>
    <filters>
        <field>Discount_Pct_Allowed__c</field>
        <operation>equals</operation>
        <value>25</value>
    </filters>
    <label>Core Pricing 15% discount</label>
</ListView>