force-app/main/default/objects/Product_Pricing__c/listViews/HRS_Pricing.listView-meta.xml
<ListView>
    <fullName>HRS_Pricing</fullName>
    <columns>NAME</columns>
    <columns>Low_Value__c</columns>
    <columns>High_Value__c</columns>
    <columns>Amount__c</columns>
    <columns>Discount_Pct_Allowed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>HRS</value>
    </filters>
    <label>HRS Pricing</label>
</ListView>