force-app/main/default/objects/Product_Pricing__c/listViews/MMS_Schedule_A.listView-meta.xml
<ListView>
    <fullName>MMS_Schedule_A</fullName>
    <columns>NAME</columns>
    <columns>Pricing_Schedule__c</columns>
    <columns>Frequency_Search__c</columns>
    <columns>Low_Value__c</columns>
    <columns>High_Value__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>MMS</value>
    </filters>
    <filters>
        <field>Pricing_Schedule__c</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <label>MMS Schedule A</label>
</ListView>