force-app/main/default/objects/Product_Pricing__c/listViews/MSP_Products.listView-meta.xml
<ListView>
    <fullName>MSP_Products</fullName>
    <columns>NAME</columns>
    <columns>Frequency_Annual_Rev__c</columns>
    <columns>Base_Fee__c</columns>
    <columns>Setup_Fee__c</columns>
    <columns>Low_Value__c</columns>
    <columns>High_Value__c</columns>
    <columns>Amount__c</columns>
    <columns>Discount_Pct_Allowed__c</columns>
    <columns>Discount_Free_Months_Allowed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>MSP</value>
    </filters>
    <label>MSP Products</label>
</ListView>